# claux

./: .gitignore  README.md  ideas_agent_1.txt  ideas_agent_2.txt  ideas_agent_3.txt
.claux/: CONTEXT.md  checkpoints.json
apps/cli/: CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  Cargo.toml  README.md
apps/cli/src/: account.rs  checkpoints.rs  claudemd.rs  config.rs  format.rs  main.rs  metrics.rs  models.rs  monitor.rs  parser.rs  render.rs  skills.rs  spend.rs  tags.rs  usage.rs
apps/cli/src/commands/: account.rs  analytics.rs  checkpoint.rs  claudemd.rs  config.rs  doctor.rs  export.rs  mod.rs  sessions.rs  skills.rs  spend.rs  status.rs  tag.rs  tui.rs
apps/desktop/: apple-native-ui.skill  plan.md
apps/desktop/Claux/: BUILD_REVIEW_CHANGELOG_2026-05-29.md  CHANGELOG.md  CLAUDE.md  MENU_BAR_ARCHITECTURE.md  Package.swift  RELEASE_DESCRIPTION_1.8.1.md  RIGHT_CLICK_ANCHORED_POPUP_FIX_2026-05-29.md  RIGHT_CLICK_APPKIT_STATUSITEM_REFACTOR_2026-05-29.md  RIGHT_CLICK_CONTEXT_MENU_UPDATE_2026-05-29.md  RIGHT_CLICK_FIX_UPDATE_2026-05-29.md  RIGHT_CLICK_GLOBAL_FALLBACK_UPDATE_2026-05-29.md  RIGHT_CLICK_NATIVE_CONTEXTMENU_UPDATE_2026-05-29.md  RIGHT_CLICK_REGRESSION_FIX_UPDATE_2026-05-29.md  build_app.sh  build_dmg.sh
docs/: README.md  SUMMARY.md
docs/cli/: README.md  configuration.md  getting-started.md  installation.md
docs/cli/commands/: spend.md  (+11 more)
docs/desktop/: README.md  analytics.md  claude-integration.md  dashboard.md  getting-started.md  history.md  installation.md  menu-bar.md  notifications.md  plan-limits.md  settings.md  troubleshooting.md
web/: index.html
(+32 files in other folders)
