[package]
name    = "claux"
version = "0.7.3"
edition = "2021"
description = "CLAUX CLI — Claude Code session tracker"

[[bin]]
name = "claux"
path = "src/main.rs"

[dependencies]
clap        = { version = "4",    features = ["derive", "cargo"] }
clap_complete = "4"
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4",  features = ["serde"] }
anyhow      = "1"
dirs        = "5"
comfy-table = "7"
owo-colors  = "4"
ratatui     = "0.29"
crossterm   = { version = "0.28", features = ["event-stream"] }
notify      = "6"
